// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logo > it works 1`] = `
<div
  class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _this_5ff345 _animation-fade_5ff345"
  data-testid="Logo"
>
  <svg
    preserveAspectRatio="none"
    viewBox="0 0 64 64"
  >
    <polygon
      class="_a_5ff345"
      points="0,0 0,32 32,32"
    />
    <polygon
      class="_b_5ff345"
      points="0,32 0,64 32,64"
    />
    <polygon
      class="_c_5ff345"
      points="32,0 32,64 64,32"
    />
  </svg>
</div>
`;

exports[`Logo > it works with animations 1`] = `
<div
  class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _this_5ff345 _animation-fade_5ff345"
  data-testid="Logo"
>
  <svg
    preserveAspectRatio="none"
    viewBox="0 0 64 64"
  >
    <polygon
      class="_a_5ff345"
      points="0,0 0,32 32,32"
    />
    <polygon
      class="_b_5ff345"
      points="0,32 0,64 32,64"
    />
    <polygon
      class="_c_5ff345"
      points="32,0 32,64 64,32"
    />
  </svg>
</div>
`;

exports[`Logo > it works with animations 2`] = `
<div
  class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _this_5ff345 _animation-slide_5ff345"
  data-testid="Logo"
>
  <svg
    preserveAspectRatio="none"
    viewBox="0 0 64 64"
  >
    <polygon
      class="_a_5ff345"
      points="0,0 0,32 32,32"
    />
    <polygon
      class="_b_5ff345"
      points="0,32 0,64 32,64"
    />
    <polygon
      class="_c_5ff345"
      points="32,0 32,64 64,32"
    />
  </svg>
</div>
`;
